--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
