--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "prisma": "^6.16.3"
   },
