--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -13,9 +13,11 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.16.3"
   },
   "devDependencies": {
