--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -20,9 +20,11 @@
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next-themes": "^0.4.6",
